# mdview

./: .gitignore  Cargo.toml  README.md  angular.json  estilos.css  main.js  package-lock.json  package.json  preload.js  tsconfig.app.json  tsconfig.renderer.app.json  tsconfig.renderer.json  tsconfig.renderer.spec.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
src/: main.rs  styles.scss
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
src/main/: main.ts
src/preload/: preload.ts
src/renderer/: package-lock.json  package.json  styles.scss
src/renderer/app/: app.component.html
src/renderer/frontend/: index.html
src/renderer/frontend/app/: app.component.scss  app.component.ts
